# src/app/models/gradeReview.model.js
@@ -8,9 +8,10 @@ const GradeReview = new Schema(
     user_id: { type: String },
     student_id: { type: String },
     grade_composition_id: { type: String },
+    grade_id: { type: String },
     state: { type: String },
     current_grade: { type: Number },
-    expected_grade: { type: Number },
+    expectation_grade: { type: Number },
     explanation: { type: String },
     comment_count: { type: String },
     created_at: { type: String },
