# swagger.json
@@ -1242,18 +1242,63 @@
         }
       }
     },
-    "api/reviews": {
+    "api/reviews?class_id=***&state=***&sort=***": {
       "get": {
         "tags": [
           "Reviews"
         ],
-        "description": "Get list review"
-      },
+        "description": "Get list review. Require auth. If student => get your list review. teacher => all review",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Review"
+              }
+            }
+          }
+        }
+      }
+    },
+    "api/reviews": {
       "post": {
         "tags": [
           "Reviews"
         ],
-        "description": "Create review"
+        "description": "Create review",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "class_id",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "grade_composition_id",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "explanation",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "expectation_grade",
+            "in": "formData",
+            "type": "number",
+            "required": true
+          }
+        ]
       }
     },
     "api/reviews/:id": {
@@ -1261,7 +1306,86 @@
         "tags": [
           "Reviews"
         ],
-        "description": "Get review"
+        "description": "Get review",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Review"
+            }
+          }
+        }
+      }
+    },
+    "api/reviews/:id/comments": {
+      "get": {
+        "description": "Get list comment of review",
+        "tags": [
+          "Comment"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Comment"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "description": "Add new comment (only teacher and owner of review can used)",
+        "tags": [
+          "Comment"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "content",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "api/reviews/:id/final-decision": {
+      "post": {
+        "description": "Make final decision of review",
+        "tags": [
+          "Comment"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "new_grade",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
       }
     }
   },
@@ -1478,6 +1602,104 @@
         },
         "full_name": {
           "type": "string"
+        }
+      }
+    },
+    "Review": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "object",
+          "properties": {
+            "$oid": {
+              "type": "string"
+            }
+          }
+        },
+        "name": {
+          "type": "string"
+        },
+        "order": {
+          "type": "integer"
+        },
+        "scale": {
+          "type": "integer"
+        },
+        "state": {
+          "type": "string"
+        },
+        "class_id": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "object",
+          "properties": {
+            "$date": {
+              "type": "string",
+              "format": "date-time"
+            }
+          }
+        },
+        "updatedAt": {
+          "type": "object",
+          "properties": {
+            "$date": {
+              "type": "string",
+              "format": "date-time"
+            }
+          }
+        },
+        "__v": {
+          "type": "integer"
+        }
+      }
+    },
+    "Comment": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "object",
+          "properties": {
+            "$oid": {
+              "type": "string"
+            }
+          }
+        },
+        "type": {
+          "type": "string"
+        },
+        "final_grade": {
+          "type": "number"
+        },
+        "content": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "string"
+        },
+        "review_id": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "object",
+          "properties": {
+            "$date": {
+              "type": "string",
+              "format": "date-time"
+            }
+          }
+        },
+        "updatedAt": {
+          "type": "object",
+          "properties": {
+            "$date": {
+              "type": "string",
+              "format": "date-time"
+            }
+          }
+        },
+        "__v": {
+          "type": "integer"
         }
       }
     }
